# CodeCompass

./: .gitignore  CMakeLists.txt  README.md  app.py  requirements.txt  ui.py  ui_backend.py  ui_theme.py  ui_visualizations.py
data/: resources.csv
include/: AVLTree.h  CSVParser.h  DoublyLinkedList.h  Engine.h  KnowledgeGraph.h  LRUCache.h  MaxHeap.h  Optimizer.h  Resource.h  Sorters.h  Stack.h  Trie.h
src/: CSVParser.cpp  Engine.cpp  main.cpp
tests/: test_algo.cpp  test_graph.cpp  test_linear.cpp  test_optimizer.cpp  test_parser.cpp  test_tree.cpp
